[package]
name = "benches"
version = "0.0.0"
publish = false
edition = "2018"

[dependencies]
bencher = "0.1.5"

[target.'cfg(target_env = "sgx")'.dependencies]
tokio = { version = "1.5.0", path = "../tokio", features = ["full-sgx"] }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
tokio = { version = "1.5.0", path = "../tokio", features = ["full"] }

[dev-dependencies]
tokio-util = { version = "0.7.0", path = "../tokio-util", features = ["full"] }
tokio-stream = { path = "../tokio-stream" }

[target.'cfg(unix)'.dependencies]
libc = "0.2.42"

[[bench]]
name = "spawn"
path = "spawn.rs"
harness = false

[[bench]]
name = "sync_mpsc"
path = "sync_mpsc.rs"
harness = false

[[bench]]
name = "rt_multi_threaded"
path = "rt_multi_threaded.rs"
harness = false


[[bench]]
name = "sync_rwlock"
path = "sync_rwlock.rs"
harness = false

[[bench]]
name = "sync_semaphore"
path = "sync_semaphore.rs"
harness = false

[[bench]]
name = "signal"
path = "signal.rs"
harness = false

[[bench]]
name = "fs"
path = "fs.rs"
harness = false
