[package]
name = "stress-test"
version = "0.1.0"
authors = ["Tokio Contributors <team@tokio.rs>"]
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(not(target_env = "sgx"))'.dependencies]
tokio = { path = "../tokio/", features = ["full"] }

[target.'cfg(target_env = "sgx")'.dependencies]
tokio = { path = "../tokio/", features = ["full-sgx"] }

[dev-dependencies]
rand = "0.8"
